ENG-7707 fix preference modal overflow

--- a/assets/stylesheets/less/partials/modal.less
+++ b/assets/stylesheets/less/partials/modal.less
@@ -6007,7 +6007,7 @@ html.microsoft {
 
 /* ========== End Of Log Section ========== */
 #userSettingsModal {
-    .size(@height: 400px, @min-height: 400px, @max-height: 800px, @min-width: 650px);
+    .size(@height: 450px, @min-height: 300px, @max-height: 800px, @min-width: 650px);
     @rowHeight: 50px;
 
     .mainSection {
@@ -6015,6 +6015,11 @@ html.microsoft {
         width: auto;
         min-width: 100%;
         height: 100%;
+    }
+
+    .modalMain {
+        height: ~"calc(100% - 122px)";
+        overflow: auto;
     }
 
     .cardMain {
